added formerly known as to home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
 <p>TODO: Home page text to follow. Also need to write meta description.</p>
+
+<div id="egg-timer">                
+    <img src="https://api.parliament.uk/egg-timer/favicon.ico" alt="The Egg Timer" id="logo" />
+    <p class="formerly">Formerly known as the egg timer.</p>
+   </div>
+</div>
