--- a/app/views/virtual_sitting_day/_virtual_sitting_day.html.erb
+++ b/app/views/virtual_sitting_day/_virtual_sitting_day.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'li', link_to( virtual_sitting_day.label, calendar_day_url( :year => virtual_sitting_day.start_date.year, :month => virtual_sitting_day.start_date.month, :day => virtual_sitting_day.start_date.day ) ) ) %>
+<%= content_tag( 'li', link_to( virtual_sitting_day.label, calendar_day_url( :year => virtual_sitting_day.start_date.strftime( '%Y' ), :month => virtual_sitting_day.start_date.strftime( '%m' ), :day => virtual_sitting_day.start_date.strftime( '%d' ) ) ) ) %>
