--- a/app/views/house_days/adjournment_day_upcoming.html.erb
+++ b/app/views/house_days/adjournment_day_upcoming.html.erb
@@ -1,6 +1,6 @@
 <% unless @house.upcoming_adjournment_days.empty? %>
 	<ol>
-		<%= render :partial => 'sitting_day/sitting_day', :collection => @house.upcoming_adjournment_days %>
+		<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.upcoming_adjournment_days %>
 	</ol>
 <% else -%>
 	<%= content_tag( 'p', "There are no upcoming adjournment days in the #{@house.name}." ) %>
