--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -4,26 +4,36 @@
 
 <p>Once you've subscribed to a calendar, any new information will be made available when the calendar is updated.</p>
 
-<div id="recess-dates">
+<section id="recess-dates">
 	<%= content_tag( 'h2', 'Recess dates' ) %>
 
-	<%= content_tag( 'h3', 'House of Commons' ) %>
-	<input value="<%= house_days_recess_dates_upcoming_url( :house => 1 ) %>.ics" size="70" />
+	<section>
+		<%= content_tag( 'h3', 'House of Commons' ) %>
+		<input value="<%= house_days_recess_dates_upcoming_url( :house => 1 ) %>.ics" class="url-copy" />
+	</section>
 
-	<%= content_tag( 'h3', 'House of Lords' ) %>
-	<input value="<%= house_days_recess_dates_upcoming_url( :house => 2 ) %>.ics" size="70" />
-</div>
+	<section>
+		<%= content_tag( 'h3', 'House of Lords' ) %>
+		<input value="<%= house_days_recess_dates_upcoming_url( :house => 2 ) %>.ics" class="url-copy" />
+	</section>
+</section>
 
-<div id="upcoming-days">
+<section id="upcoming-days">
 
 	<%= content_tag( 'h2', 'Upcoming days' ) %>
+	
+	<section>
+		<%= content_tag( 'h3', 'House of Commons' ) %>
+		<input value="<%= house_days_upcoming_url( :house => 1 ) %>.ics" class="url-copy" />
+	</section>
 
-	<%= content_tag( 'h3', 'House of Commons' ) %>
-	<input value="<%= house_days_upcoming_url( :house => 1 ) %>.ics" size="70" />
+	<section>
+		<%= content_tag( 'h3', 'House of Lords' ) %>
+		<input value="<%= house_days_upcoming_url( :house => 2 ) %>.ics" class="url-copy" />
+	</section>
 
-	<%= content_tag( 'h3', 'House of Lords' ) %>
-	<input value="<%= house_days_upcoming_url( :house => 2 ) %>.ics" size="70" />
-
-	<%= content_tag( 'h3', 'Both Houses' ) %>
-	<input value="<%= house_upcoming_all_url %>.ics" size="70" />
-</div>
+	<section>
+		<%= content_tag( 'h3', 'Both Houses' ) %>
+		<input value="<%= house_upcoming_all_url %>.ics" class="url-copy" />
+	</section>
+</section>
