--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -1,7 +1,7 @@
 <p>
-<button><%= link_to( 'Previous month', calendar_month_url( :year => @previous_date.strftime( '%Y' ), :month => @previous_date.strftime( '%m' ) ) ) %></button>
+<%= link_to( 'Previous month', calendar_month_url( :year => @previous_date.strftime( '%Y' ), :month => @previous_date.strftime( '%m' ) ), :class => 'previous' ) %>
 
-<button class="next"><%= link_to( 'Next month', calendar_month_url( :year => @next_date.strftime( '%Y' ), :month => @next_date.strftime( '%m' ) ) )  %></button>
+<%= link_to( 'Next month', calendar_month_url( :year => @next_date.strftime( '%Y' ), :month => @next_date.strftime( '%m' ) ), :class => 'next' )  %>
 </p>
 
 <div class="table-wrapper">
