--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -484,25 +484,22 @@ input[type=number] {
 input:focus {
 	border-color: blue;
 }
-button {
+button, a.previous, a.next {
 	background-color: white;
 	border: 2pt solid #373151;
 	border-radius: 0.25rem;
 	color: #373151;
 	cursor: pointer;
+	display: inline-block;
 	font-size: 1.2rem;
 	font-weight: bold;
 	padding: 1rem;
 	text-decoration: none;
 }
-button.next {
+a.next {
 	float: right;
 }
-button a {
-	color: #373151;
-	text-decoration: none;
-}
-button:hover, button:hover * {
+button:hover, a.previous:hover, a.next:hover {
 	background-color: #373151;
 	color: #fff;
 }
