added partials for disclaimer and calculation assumptions to calculation by style template

--- a/app/views/calculator/style.html.erb
+++ b/app/views/calculator/style.html.erb
@@ -1,1 +1,5 @@
 <%= render :partial => 'style_form'%>
+
+<%= render :partial => 'workings/calculations' %>
+
+<%= render :partial => 'disclaimer/disclaimer' %>
