wrapped schema picture in schema wrapper div for horizontal scrolling

--- a/app/views/meta/schema.html.erb
+++ b/app/views/meta/schema.html.erb
@@ -1,1 +1,3 @@
-<a href="/egg-timer/schema.png"><%= image_tag( '/egg-timer/schema.png' ) %></a>
+<div class="schema-wrapper">
+	<a href="/egg-timer/schema.png"><%= image_tag( '/egg-timer/schema.png' ) %></a>
+</div>
