changed id of calculator style form

--- a/app/views/test/_style_form.html.erb
+++ b/app/views/test/_style_form.html.erb
@@ -1,4 +1,4 @@
-<form action="/egg-timer/calculator/calculate" method="GET" id="calculator">
+<form action="/egg-timer/calculator/calculate" method="GET" id="style-calculator">
 	<fieldset>
 		<legend>Calculation style</legend>
 		<p>
@@ -14,4 +14,5 @@
 	</fieldset>
 	
 	<button type="submit" id="calculate">Start</button>
+
 </form>
