made id on calculator style form unique

--- a/app/views/test/_style_form.html.erb
+++ b/app/views/test/_style_form.html.erb
@@ -13,6 +13,6 @@
 		</p>
 	</fieldset>
 	
-	<button type="submit" id="calculate">Start</button>
+	<button type="submit" id="calculate-style">Start</button>
 
 </form>
