updated column headings on calendar tables to be scrutiny day not praying

--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -11,9 +11,9 @@
 				<th>Date</th>
 				<th>Day</th>
 				<th>Commons day type</th>
-				<th>Commons praying</th>
+				<th>Commons scrutiny day?</th>
 				<th>Lords day type</th>
-				<th>Lords praying</th>
+				<th>Lords  scrutiny day?</th>
 			</tr>
 		</thead>
 		<tbody>
