updated link to code comments

--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
 	<li><%= link_to( 'MacOS application', meta_app_url )  %></li>
-	<li><%= link_to( 'Calculation code comments', meta_comment_url )  %></li>
+	<li><%= link_to( 'Calculation code comments', code_comment_list_url )  %></li>
 	<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
 	<li><%= link_to( 'Source code: github.com/ukparliament/egg-timer', 'https://github.com/ukparliament/egg-timer' ) %></li>
 	<li><%= link_to( 'Librarian tools', meta_librarian_tools_url ) %></li>
