--- a/app/views/workings/_calculations.html.erb
+++ b/app/views/workings/_calculations.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'p', "The assumptions made in interpreting legislation which form the basis of our calculations are #{link_to( 'documented here', meta_comment_url )}.".html_safe, :class => 'assumptions' ) %>
+<%= content_tag( 'p', "The assumptions made in interpreting legislation which form the basis of our calculations are #{link_to( 'documented here', code_comment_list_url )}.".html_safe, :class => 'assumptions' ) %>
