tidied homepage a little

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,8 @@
 
 <div id="calculators">
 	<%= content_tag( 'h2', 'Calculators' ) %>
-	<%= content_tag( 'h3', 'Scrutiny end date calculator' ) %>
-	<%= content_tag( 'p', 'A tool for calculating the end date for scrutiny of a paper subject to a particular procedure.' ) %>
-	<%= content_tag( 'h3', 'Sitting days during an interval calculator' ) %>
-	<%= content_tag( 'p', 'A tool for calculating the number of sitting days between two dates.' ) %>
+	<%= content_tag( 'p', "#{link_to( 'Scrutiny end date calculator', calculator_form_url )} - a tool for calculating the end date for scrutiny of a paper subject to a particular procedure.".html_safe ) %>
+	<%= content_tag( 'p', "#{link_to( 'Sitting days during an interval calculator', calculator_interval_url )} - a tool for calculating the number of sitting days between two dates.".html_safe ) %>
 </div>
 
 <div id="time-periods">
@@ -23,8 +21,9 @@
 	<%= content_tag( 'p', "#{link_to( 'Subscribe to calendars', meta_subscribe_url )} for recess periods and upcoming days for both Houses.".html_safe ) %>
 </div>
 
-<div id="egg-timer">                
+<div id="egg-timer">
+	<%= content_tag( 'h2', 'Formerly known as' ) %>
     <img src="https://api.parliament.uk/egg-timer/favicon.ico" alt="The Egg Timer" id="logo" />
-    <p class="formerly">Formerly known as the egg timer.</p>
+    <p class="formerly">The egg timer.</p>
    </div>
 </div>
