remove h1 from code comments

--- a/app/views/code_comment/comments/_app_controllers_calculator_controller.html.erb
+++ b/app/views/code_comment/comments/_app_controllers_calculator_controller.html.erb
@@ -1,13 +1,10 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/controllers/calculator_controller.rb">
         app/controllers/calculator_controller.rb
       </a>
     </p>
-  
-
-    <h1>Calculator controller to build the scrutiny period form and run the calculations.</h1>
+    
 
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/controllers/calculator_controller.rb#L2' title='View on GitHub'>2</a> class CalculatorController &lt; ApplicationController</code></pre>
 <p>Include code from each of the modules for the different styles of calculation.</p>
@@ -445,6 +442,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/controllers/calculator_controller.rb#L405' title='View on GitHub'>405</a>     render :template =&gt; &#39;calculator/not_enough_information&#39;</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/controllers/calculator_controller.rb#L406' title='View on GitHub'>406</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/controllers/calculator_controller.rb#L407' title='View on GitHub'>407</a> end</code></pre>
-  
-
 
