--- a/app/views/code_comment/comments/_app_lib_calculations_bicameral_si_either_house_sitting.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_bicameral_si_either_house_sitting.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb">
         app/lib/calculations/bicameral_si_either_house_sitting.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb#L2' title='View on GitHub'>2</a>   module BicameralSiEitherHouseSitting</code></pre>
-<h1>A method for calculating the end date of a scrutiny period, based on days on which <strong>either</strong> House must be sitting or on a short adjournment.</h1>
+
 
 <p>This method is used for bicameral negative Statutory Instruments as set out by the Statutory Instruments Act 1946 and for made affirmative Statutory Instruments as set out by their enabling Act.</p>
 
@@ -88,6 +85,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb#L71' title='View on GitHub'>71</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb#L72' title='View on GitHub'>72</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_si_either_house_sitting.rb#L73' title='View on GitHub'>73</a> end</code></pre>
-  
-
 
