--- a/app/views/code_comment/comments/_app_lib_calculations_commons_only_sitting_days.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_commons_only_sitting_days.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb">
         app/lib/calculations/commons_only_sitting_days.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb#L2' title='View on GitHub'>2</a>   module CommonsOnlySittingDays</code></pre>
-<h1>A method for calculating the end date for delegated legislation laid into the House of Commons only, taking account of sitting days.</h1>
+
 
 <p>The calculation counts a day whenever the House of Commons has an actual sitting day - and requires the start date and the number of days to count.</p>
 
@@ -65,6 +62,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb#L54' title='View on GitHub'>54</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb#L55' title='View on GitHub'>55</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_sitting_days.rb#L56' title='View on GitHub'>56</a> end</code></pre>
-  
-
 
