--- a/app/views/code_comment/comments/_app_lib_calculations_interval.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_interval.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb">
         app/lib/calculations/interval.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb#L2' title='View on GitHub'>2</a>   module Interval</code></pre>
-<h1>A method for calculating the number of sitting days in both Houses during an interval.</h1>
+
 
 <p>We pass the start and end dates of the interval.</p>
 
@@ -41,6 +38,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb#L32' title='View on GitHub'>32</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb#L33' title='View on GitHub'>33</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/interval.rb#L34' title='View on GitHub'>34</a> end</code></pre>
-  
-
 
