--- a/app/views/code_comment/comments/_app_lib_calculations_pnsi.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_pnsi.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb">
         app/lib/calculations/pnsi.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb#L2' title='View on GitHub'>2</a>   module Pnsi</code></pre>
-<h1>A method for calculating the end date of committee scrutiny periods for Proposed Negative Statutory Instruments (PNSIs).</h1>
+
 
 <p>The calculation counts in parliamentary sitting days, requiring the laying date and the number of days to count.</p>
 
@@ -73,6 +70,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb#L57' title='View on GitHub'>57</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb#L58' title='View on GitHub'>58</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/pnsi.rb#L59' title='View on GitHub'>59</a> end</code></pre>
-  
-
 
