--- a/app/views/code_comment/comments/_app_lib_calculations_treaty.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_treaty.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb">
         app/lib/calculations/treaty.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb#L2' title='View on GitHub'>2</a>   module Treaty</code></pre>
-<h1>A method for calculating the end date for treaty periods A and B.</h1>
+
 
 <p>The calculation counts a day whenever both Houses have an actual sitting day - and requires the start date and the number of days to count.</p>
 
@@ -73,6 +70,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb#L58' title='View on GitHub'>58</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb#L59' title='View on GitHub'>59</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/treaty.rb#L60' title='View on GitHub'>60</a> end</code></pre>
-  
-
 
