--- a/app/views/code_comment/comments/_config_initializers_monkey_patching.html.erb
+++ b/app/views/code_comment/comments/_config_initializers_monkey_patching.html.erb
@@ -1,13 +1,10 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/config/initializers/monkey_patching.rb">
         config/initializers/monkey_patching.rb
       </a>
     </p>
-  
-
-    <h1>A monkey patched Ruby date class to handle UK Parliament specific day types.</h1>
+    
 
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/config/initializers/monkey_patching.rb#L2' title='View on GitHub'>2</a> module DateMonkeyPatch</code></pre>
 <h2>A set of methods to work out the type of a given day.</h2>
@@ -691,6 +688,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/config/initializers/monkey_patching.rb#L722' title='View on GitHub'>722</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/config/initializers/monkey_patching.rb#L723' title='View on GitHub'>723</a> end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/config/initializers/monkey_patching.rb#L725' title='View on GitHub'>725</a> Date.include(DateMonkeyPatch)</code></pre>
-  
-
 
