--- a/app/views/code_comment/comments/_app_lib_calculations_bicameral_both_houses_sitting.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_bicameral_both_houses_sitting.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb">
         app/lib/calculations/bicameral_both_houses_sitting.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb#L2' title='View on GitHub'>2</a>   module BicameralBothHousesSitting</code></pre>
-<h1>A method for calculating the end date of scrutiny periods during which <strong>both</strong> Houses must be sitting or on a short adjournment, used for made affirmative Statutory Instruments as set out by their enabling Act. Also used for Legislative Reform Orders, Public Body Orders, Localism Orders and enhanced affirmatives under the Investigatory Powers Act 2016.</h1>
+
 
 <p><a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/7#section-7-1">Paragraph 1 of section 7 of the Statutory Instrument Act 1946</a> sets out that - in calculating the scrutiny period for an SI under that Act - “no account shall be taken of any time during which Parliament is dissolved or prorogued or during which <em>both</em> Houses are adjourned for more than four days.” This applies to the majority of made affirmative instruments.</p>
 
@@ -96,6 +93,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb#L75' title='View on GitHub'>75</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb#L76' title='View on GitHub'>76</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/bicameral_both_houses_sitting.rb#L77' title='View on GitHub'>77</a> end</code></pre>
-  
-
 
