--- a/app/views/code_comment/comments/_app_lib_calculations_commons_only_si.html.erb
+++ b/app/views/code_comment/comments/_app_lib_calculations_commons_only_si.html.erb
@@ -1,15 +1,12 @@
-
 <p>
-      On GitHub &rarr; 
+      On GitHub: 
       <a href="https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb">
         app/lib/calculations/commons_only_si.rb
       </a>
     </p>
-  
-
     <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb#L1' title='View on GitHub'>1</a> module Calculations</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb#L2' title='View on GitHub'>2</a>   module CommonsOnlySi</code></pre>
-<h1>A method for calculating the end date of a scrutiny period, based on days on which the House of Commons must be sitting or on a short adjournment. This method is used for Commons only negative Statutory Instruments as set out by the Statutory Instruments Act 1946 and for made affirmative Statutory Instruments as set out by their enabling Act.</h1>
+
 
 <p>The calculation counts in actual sitting days, requiring the start date and the number of days to count.</p>
 
@@ -79,6 +76,4 @@
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb#L64' title='View on GitHub'>64</a>     end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb#L65' title='View on GitHub'>65</a>   end</code></pre>
 <pre><code><a href='https://github.com/ukparliament/egg-timer/blob/main/app/lib/calculations/commons_only_si.rb#L66' title='View on GitHub'>66</a> end</code></pre>
-  
-
 
