--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
-<%= content_tag( 'p', "This is the #{link_to( 'Commons Library', 'https://commonslibrary.parliament.uk/' )} resource for parliamentary time.".html_safe ) %>
+<%= content_tag( 'p', "A resource for parliamentary time, provided by the #{link_to( 'Commons Library', 'https://commonslibrary.parliament.uk/' )}.".html_safe ) %>
 
 <div id="calculators">
 	<%= content_tag( 'h2', 'Calculators' ) %>
+	<%= content_tag( 'p', 'Time periods can be calculated for dates after June 2017.' ) %>
 	<%= content_tag( 'p', "#{link_to( 'Scrutiny end date calculator', calculator_form_url )} - a tool for calculating the end date for scrutiny of a paper subject to a particular procedure.".html_safe ) %>
 	<%= content_tag( 'p', "#{link_to( 'Sitting days during an interval calculator', calculator_interval_url )} - a tool for calculating the number of sitting days between two dates.".html_safe ) %>
 </div>
@@ -9,16 +10,18 @@
 <div id="time-periods">
 	<%= content_tag( 'h2', 'Time periods' ) %>
 	<%= content_tag( 'p', "#{link_to( 'Parliaments', parliament_list_url )}, #{link_to( 'dissolutions', dissolution_period_list_url )}, #{link_to( 'sessions', session_list_url )}, #{link_to( 'prorogations', prorogation_period_list_url )} and recesses in #{link_to( 'both Houses', house_list_url )}.".html_safe ) %>
+	<%= content_tag( 'p', 'Data for Parliaments, dissolutions, sessions and prorogations is populated from the first Parliament of the United Kingdom, in 1801.' ) %>
+	<%= content_tag( 'p', 'Recess data is populated from June 2017.' ) %>
 </div>
 
 <div id="calendar">
 	<%= content_tag( 'h2', 'Calendar' ) %>
-	<%= content_tag( 'p', 'A calendar of each day showing ...' ) %>
+	<%= content_tag( 'p', 'A calendar showing House of Commons and House of Lords sitting, virtual sitting and adjournment days. The data is populated from June 2017.' ) %>
 </div>
 
 <div id="subscribe">
 	<%= content_tag( 'h2', 'Calendar subscriptions' ) %>
-	<%= content_tag( 'p', "#{link_to( 'Subscribe to calendars', meta_subscribe_url )} for recess periods and upcoming days for both Houses.".html_safe ) %>
+	<%= content_tag( 'p', "#{link_to( 'Subscribe to calendars', meta_subscribe_url )}  for future recess periods, sitting, virtual sitting and adjournment days for the House of Commons or the House of Lords.".html_safe ) %>
 </div>
 
 <div id="egg-timer">
