fixed the this was calculated by message

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -16,7 +16,7 @@
 	<strong><big><time><%= @scrutiny_end_date.strftime( '%A, %-d %B %Y') %></time></big></strong>
 </p>
 
-<p>This was calculated using this information:</p>
+<p>These dates were calculated using this information:</p>
 	
 <ul>
 
