added legal stuff to footer

--- a/app/views/layouts/footer/_footer.html.erb
+++ b/app/views/layouts/footer/_footer.html.erb
@@ -7,6 +7,13 @@
 				-
 				<%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
 			</p>
+			<p>
+				<a href="https://www.parliament.uk/site-information/accessibility/">Accessibility statement</a>
+				-
+				<%= link_to( 'Cookies', meta_cookies_url )  %>
+				-
+				<a href="https://commonslibrary.parliament.uk/privacy-policy/">Privacy notice</a>
+			</p>
 		</div>
 	</div>
 </footer>
