--- a/app/views/code_comment/index.html.erb
+++ b/app/views/code_comment/index.html.erb
@@ -16,4 +16,5 @@
 <%= content_tag( 'h2', 'Scrutiny start date calculators' ) %>
 <ul>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', code_comment_pnsis_reverse_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', code_comment_treaties_reverse_url ) ) %>
 </ul>
