added code comments for the reverse calculation for Commons only sitting days

--- a/app/views/code_comment/index.html.erb
+++ b/app/views/code_comment/index.html.erb
@@ -17,4 +17,5 @@
 <ul>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', code_comment_pnsis_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', code_comment_treaties_reverse_url ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for Commons only sitting days', code_comment_commons_only_sitting_days_reverse_url ) ) %>
 </ul>
